# work-shop-wednesday

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-pages.yml
src/: conf.py  general.md  generators.md  index.md  iterators.md
src/python/: contextmanager.md  general.md  generators.md  index.md  iterable.md  iterators.md  yieldfrom.md
src/python/asyncio/: coroutine_generator_issue.md  cpython.md  future1.py  future2.py  future3.py  future4.py  future5.py  handle.py  implementing.md  intro.md  loop1.py  loop2.py  loop3.py  loop4.py  loop5.py  missing.md  step1.md  step2.md  step3.md  step4.md  stepz.md  task1.py  task2.py  task3.py  task4.py  task5.py  wait.py
src/python/asyncio/cpython/: async_await.md  async_await_1.md  async_await_2.md  async_await_3.md  async_context_manager.md  async_generators.md  async_iterators.md  asyncio_py34.md  asyncio_py35.md  asyncio_py37.md  awaitable.md  coroutine_generator_issue.md  example_1.py  examples.md  future.diff  future.py  gotchas.md  handle.py  history.md  issues.md  own_implementation.md  stepz.py
src/python/asyncio/step1/: index.md
src/python/asyncio/step10/: future.py  index.md  loop.diff  loop.py  step10.diff  step10_2.py  task.diff  task.py
src/python/asyncio/step11/: index.md  loop.diff  loop.py  step11.py  task.diff  task.py
src/python/asyncio/step12/: future.diff  future.py  index.md  loop.diff  task.diff  task.py
src/python/asyncio/step13/: index.md  loop.diff  step13.py
src/python/asyncio/step14/: index.md  loop.py  step14.py
src/python/asyncio/step15/: index.md  loop.diff  loop.py  step15.py
src/python/asyncio/step16/: future.diff  future.py  index.md  step16.py  task.diff  task.py  test_cancel.py  wait.py
src/python/asyncio/step2/: index.md
src/python/asyncio/step5/: index.md  step5.py
src/python/asyncio/step6/: index.md  loop.py  step6.py
src/python/asyncio/step7/: index.md  step7.py
src/python/asyncio/step8/: future.py  index.md  loop.py  step8.py
src/python/asyncio/step9/: future.diff  index.md  step9_1.py  step9_2.py  task.py
